# marmot-cli

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  mdk_helper.rs  nostr_client.rs  output.rs
src/commands/: accept_welcome.rs  init.rs  list_groups.rs  list_welcomes.rs  mod.rs  publish_key_package.rs  receive.rs  send.rs  whoami.rs
