[package]
name = "marmot-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for MLS-encrypted messaging over Nostr (MDK)"
license = "MIT"

[[bin]]
name = "marmot"
path = "src/main.rs"

[dependencies]
# MDK core libraries
mdk-core = { git = "https://github.com/marmot-protocol/mdk" }
mdk-sqlite-storage = { git = "https://github.com/marmot-protocol/mdk" }

# Nostr
nostr-sdk = { version = "0.44", features = ["nip59"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
